# mimetypeplus-python

./: README.md  SECURITY.md  build-and-release.bat  pyproject.toml  requirements.txt
.github/: FUNDING.yml
docs/: cmds.html  index.html  mimetypecheckers.html  mimetypeplus.html  tools.html  typings.html
docs/tests/: example_tests.html  index.html  specific_tests.html
mimetypeplus/: __init__.py  cmds.py  mimetypecheckers.py  mimetypeplus.py  tools.py  typings.py
mimetypeplus/tests/: __init__.py  example_tests.py  specific_tests.py
reports/: COVERAGE.md  PYRIGHT.txt  UNITTEST.txt
